--- a/MesaRestaurant/Web.config
+++ b/MesaRestaurant/Web.config
@@ -16,8 +16,9 @@
   
   
   <system.web>
+    
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="20480" executionTimeout="180"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
